--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -38,7 +38,7 @@
 /* Navbar link */
 .navbar-wagon-link {
   color: #616668;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 .navbar-wagon-link:hover {
   color: #da552f;
@@ -55,7 +55,7 @@
   transition: color 0.3s ease;
   font-weight: lighter !important;
   color: #999999 !important;
-  font-size: 15px !important;
+  font-size: 1rem !important;
   line-height: 22px !important;
   padding: 10px 20px;
 }
