--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,7 +11,7 @@ $font-size-base: 1rem;
 
 // Colors
 $gray-base:       $gray;
-$brand-primary:   $blue;
+$brand-primary:   $sapin-green;
 $brand-success:   $green;
 $brand-info:      $yellow;
 $brand-danger:    $red;
