--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,14 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900|Roboto:300,400,500,700,900");
+@font-face {
+	font-family: "Tahu";
+	src: url("tahu.ttf") format("truetype");
+}
 
 // Define fonts for body and headers
-$body-font: "Open Sans", "Helvetica", "sans-serif";
-$headers-font: "Raleway", "Helvetica", "sans-serif";
+$logo-font: "Tahu", "sans-serif";
+$body-font: "Roboto", "sans-serif";
+$headers-font: "Montserrat", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
