--- a/app/assets/stylesheets/config/_utilities.scss
+++ b/app/assets/stylesheets/config/_utilities.scss
@@ -6,3 +6,17 @@
 .main-padding {
   padding: 20px;
 }
+
+.has-invalid {
+  .invalid-feedback {
+    display: block;
+  }
+
+  label {
+    color: $red;
+  }
+
+  .form-control {
+    border-color: $red;
+  }
+}
