--- a/app/views/soundboard/sounds/index.html.haml
+++ b/app/views/soundboard/sounds/index.html.haml
@@ -1,1 +1,9 @@
-= "sapin-box.s3.eu-west-3.amazonaws.com#{@sounds.first.file.path}"
+.soundboard-container.main-padding
+  = render @sounds
+  = render @sounds
+  = render @sounds
+  = render @sounds
+  = render @sounds
+  = render @sounds
+  = render @sounds
+  = render @sounds
