--- a/app/assets/stylesheets/components/_soundboard_container.scss
+++ b/app/assets/stylesheets/components/_soundboard_container.scss
@@ -1,3 +1,7 @@
 .soundboard-container {
-  
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
