--- a/app/assets/stylesheets/components/_landing.scss
+++ b/app/assets/stylesheets/components/_landing.scss
@@ -7,6 +7,6 @@
   background-size: cover;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
   .logo {
-    font-size: 10rem;
+    font-size: 10rem !important;
   }
 }
