fix font config for heroku

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800,900|Roboto:300,400,500,700,900");
 @font-face {
 	font-family: "Tahu";
-	src: url("tahu.ttf") format("truetype");
+	src: font-url("tahu.ttf") format("truetype");
 }
 
 // Define fonts for body and headers
